--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.13.2",
     "nodeman": "^1.1.2",
     "nodemon": "^3.1.9"
