--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "index.js": "^0.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodeman": "^1.1.2",
